fix bg height on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -98,5 +98,6 @@ img {
     .parallax {
         background-attachment: scroll !important;
         background-position: center center !important;
+        height: 50px !important;
     }
 }
